--- a/app/src/main/res/layout/dialog_authorization.xml
+++ b/app/src/main/res/layout/dialog_authorization.xml
@@ -17,7 +17,7 @@
         android:text="Для входа в профиль введите свою почту и пароль" />
 
     <LinearLayout
-        android:id="@+id/layout_name"
+        android:id="@+id/layout_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/layout_tell"
+        android:id="@+id/layout_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
             android:hint="Пароль"
-            android:inputType="phone"
+            android:inputType="textPassword"
             android:maxLength="20"
             android:padding="5dp" />
     </LinearLayout>
