--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -5,153 +5,169 @@
     android:layout_height="match_parent"
     android:background="@color/colorGray"
     android:orientation="vertical">
-    <!-- Пользователи -->
-    <LinearLayout
-        android:id="@+id/layout_authorization"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:background="@color/colorWhite"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:visibility="visible">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:background="@drawable/border_gray_circle"
-            app:srcCompat="@drawable/ic_user" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <!-- Пользователи -->
+            <LinearLayout
+                android:id="@+id/layout_authorization"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorWhite"
+                android:orientation="vertical"
+                android:padding="5dp"
+                android:visibility="visible">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:text="Авторизируйтесь или зарегистрируйтесь для более быстрого заказа товаров." />
-        <!-- Авторизация -->
-        <Button
-            android:id="@+id/btn_authorization"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/colorGreen"
-            android:text="Вход"
-            android:textColor="@color/colorWhite" />
-        <!-- Регистрация -->
-        <Button
-            android:id="@+id/btn_registration"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@drawable/border_green"
-            android:text="Регистрация"
-            android:textColor="@color/colorGreen" />
-    </LinearLayout>
-    <!-- Авторизированный пользователь -->
-    <LinearLayout
-        android:id="@+id/layout_authorizedUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:background="@color/colorWhite"
-        android:visibility="gone">
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/border_gray_circle"
+                    app:srcCompat="@drawable/ic_user" />
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="10dp"
-            android:background="@drawable/border_gray_circle"
-            app:srcCompat="@drawable/ic_user" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:text="Авторизируйтесь или зарегистрируйтесь для более быстрого заказа товаров." />
+                <!-- Авторизация -->
+                <Button
+                    android:id="@+id/btn_authorization"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/colorGreen"
+                    android:text="Вход"
+                    android:textColor="@color/colorWhite" />
+                <!-- Регистрация -->
+                <Button
+                    android:id="@+id/btn_registration"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="@drawable/border_green"
+                    android:text="Регистрация"
+                    android:textColor="@color/colorGreen" />
+            </LinearLayout>
+            <!-- Авторизированный пользователь -->
+            <LinearLayout
+                android:id="@+id/layout_authorizedUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorWhite"
+                android:visibility="gone">
 
-        <TextView
-            android:id="@+id/txt_nameUser"
-            style="@style/txtTitleStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Фамилия Имя" />
-    </LinearLayout>
-    <!-- Полезная ифнормация -->
-    <TextView
-        android:id="@+id/txt_title"
-        style="@style/txtTitleStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:text="Полезная информация" />
-    <!-- Кнопки -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border_gray_circle"
+                    app:srcCompat="@drawable/ic_user" />
 
-        <Button
-            android:id="@+id/btn_category"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Католог товаров" />
+                <TextView
+                    android:id="@+id/txt_nameUser"
+                    style="@style/txtTitleStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Фамилия Имя" />
+            </LinearLayout>
+            <!-- Полезная ифнормация -->
+            <TextView
+                android:id="@+id/txt_title"
+                style="@style/txtTitleStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Полезная информация" />
+            <!-- Кнопки -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <!-- Контакты -->
-        <Button
-            android:id="@+id/btn_contacts"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Контакты" />
+                <Button
+                    android:id="@+id/btn_category"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Католог товаров" />
 
-        <TextView
-            style="@style/txtTitleStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="Серфис и поддержка" />
+                <!-- Контакты -->
+                <Button
+                    android:id="@+id/btn_contacts"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Контакты" />
 
-        <Button
-            android:id="@+id/btn_leaveMessage"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Оставить обращение" />
+                <TextView
+                    style="@style/txtTitleStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="Серфис и поддержка" />
 
-        <Button
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Обмен и возрат" />
+                <Button
+                    android:id="@+id/btn_leaveMessage"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Оставить обращение" />
 
-        <Button
-            android:id="@+id/btn_orderStatus"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Статус заказа" />
+                <Button
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Обмен и возрат" />
 
-        <TextView
-            style="@style/txtTitleStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="Получение и оплата" />
+                <Button
+                    android:id="@+id/btn_orderStatus"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Статус заказа" />
 
-        <Button
-            android:id="@+id/btn_pick"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Самовывоз" />
+                <TextView
+                    style="@style/txtTitleStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="Получение и оплата" />
 
-        <Button
-            android:id="@+id/btn_delivery"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Доставка" />
+                <Button
+                    android:id="@+id/btn_pick"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Самовывоз" />
 
-        <Button
-            android:id="@+id/btn_payment"
-            style="@style/btnInfo"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="Способы оплаты" />
-    </LinearLayout>
+                <Button
+                    android:id="@+id/btn_delivery"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Доставка" />
+
+                <Button
+                    android:id="@+id/btn_payment"
+                    style="@style/btnInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="Способы оплаты" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorWhite" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
